Fix application configuration

--- a/micronaut-backend/src/main/resources/application.yml
+++ b/micronaut-backend/src/main/resources/application.yml
@@ -7,20 +7,15 @@ micronaut:
         paths: classpath:public
         mapping: /**
         enabled: true
-#  http:
-#    client:
-#      read-timeout: 60s
-#      num-of-threads: 80
-#      pool:
-#        acquire-timeout: 60s
-#        max-connections: 80
-#        max-pending-acquires: 80
-#      connect-timeout: 60s
+  http:
+    client:
+      event-loop-group: client
+  netty:
+    event-loops:
+      client:
+        num-threads: 12
+        prefer-native-transport: true
 netty:
   default:
     allocator:
       max-order: 3
-#  event-loops:
-#    default:
-#      num-threads: 80
-#      prefer-native-transport: true
